# nedward-discord-bot

./: .env.example  .gitignore  get_cwl_lineups.py  main.py  pyproject.toml  random_facts.py
data_selectors/: players.py
integrations/: clash_of_clans.py
models/: players.py
